# blockchain-cplusplus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  fuzz.yml  nightly.yml
benchmarks/: CMakeLists.txt  bench_main.cpp
configs/: relay_client.example.json  relay_seed.example.json  simulator.example.json
fuzz/: CMakeLists.txt  fuzz_decode_ledger.cpp  fuzz_deserialize_block.cpp  fuzz_deserialize_transaction.cpp  fuzz_mempool_admission.cpp  fuzz_p2p_handshake_payload.cpp  fuzz_p2p_message.cpp
include/blockchain/: error.hpp
include/blockchain/consensus/: chain.hpp  params.hpp
include/blockchain/crypto/: hash.hpp
include/blockchain/mempool/: mempool.hpp  policy.hpp  restore.hpp
include/blockchain/net/: p2p_message.hpp  p2p_payloads.hpp  socket_io.hpp
include/blockchain/node/: config.hpp  config_json.hpp  genesis.hpp  network.hpp  peer_state.hpp  simulator.hpp
include/blockchain/production/: block_builder.hpp
include/blockchain/protocol/: block.hpp  constants.hpp  transaction.hpp
include/blockchain/serialization/: byte_io.hpp
include/blockchain/state/: utxo_set.hpp
include/blockchain/storage/: chain_store.hpp  ledger_format.hpp
include/blockchain/validation/: block_validation.hpp  transaction_validation.hpp
scripts/: benchmark.sh  ci.sh  format.sh  local_network.sh  sanitize.sh  tidy.sh
src/: CMakeLists.txt
src/cli/: main.cpp
src/consensus/: chain.cpp
src/crypto/: sha256.cpp
src/mempool/: mempool.cpp  policy.cpp  restore.cpp
src/net/: p2p_message.cpp  p2p_payloads.cpp  socket_io.cpp
src/node/: config.cpp  config_json.cpp  genesis.cpp  network.cpp  peer_state.cpp  simulator.cpp
src/production/: block_builder.cpp
src/protocol/: block.cpp  transaction.cpp
src/serialization/: byte_io.cpp
src/state/: utxo_set.cpp
src/storage/: chain_store.cpp
src/validation/: block_validation.cpp  transaction_validation.cpp
tests/: CMakeLists.txt  process_spawn.hpp  test_adversarial_net.cpp  test_adversarial_storage.cpp  test_block.cpp  test_block_builder.cpp  test_block_validation.cpp  test_chain.cpp  test_coinbase.cpp  test_config.cpp  test_config_json.cpp  test_e2e.cpp  test_main.cpp  test_mempool.cpp  test_multinode_process.cpp  test_network_relay.cpp  test_p2p_message.cpp  test_p2p_payloads.cpp  test_peer_state.cpp  test_restart_integration.cpp  test_serialization.cpp  test_sha256.cpp  test_simulator.cpp  test_stage3.cpp  test_storage.cpp  test_tcp_ping.cpp  test_transaction.cpp  test_transaction_validation.cpp  test_utxo_set.cpp  testing.hpp
