# Fuzz targets require a Clang toolchain (-fsanitize=fuzzer). Enable with the
# 'fuzz' preset, which also turns on ASan + UBSan.
if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  message(FATAL_ERROR "Fuzz targets require a Clang toolchain (-fsanitize=fuzzer)")
endif()

function(blockchain_add_fuzzer name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PRIVATE blockchain_core)

  set(_extra "")
  if(BLOCKCHAIN_ENABLE_ASAN)
    list(APPEND _extra "address")
  endif()
  if(BLOCKCHAIN_ENABLE_UBSAN)
    list(APPEND _extra "undefined")
  endif()
  list(JOIN _extra "," _extra_joined)
  if(_extra_joined)
    set(_link_san "fuzzer,${_extra_joined}")
    set(_compile_san "fuzzer-no-link,${_extra_joined}")
  else()
    set(_link_san "fuzzer")
    set(_compile_san "fuzzer-no-link")
  endif()

  target_compile_options(${name} PRIVATE -fsanitize=${_compile_san} -fno-omit-frame-pointer -g)
  target_link_options(${name} PRIVATE -fsanitize=${_link_san})
endfunction()

blockchain_add_fuzzer(fuzz_deserialize_transaction)
blockchain_add_fuzzer(fuzz_deserialize_block)
blockchain_add_fuzzer(fuzz_p2p_message)
blockchain_add_fuzzer(fuzz_p2p_handshake_payload)
blockchain_add_fuzzer(fuzz_decode_ledger)
blockchain_add_fuzzer(fuzz_mempool_admission)
